--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,12 @@
             <version>5.3.3</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.codeborne</groupId>
+            <artifactId>selenide</artifactId>
+            <version>6.14.0</version>
+        </dependency>
+
     </dependencies>
 
     <build>
